Fixing the dark mode button and applying the styles in theme file.

--- a/frontend/app/globals.css
+++ b/frontend/app/globals.css
@@ -1,9 +1,5 @@
 @import "tailwindcss";
-
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
-}
+@import "../styles/index.css";
 
 @theme inline {
   --color-background: var(--background);
@@ -24,3 +20,4 @@ body {
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
 }
+
